[package]
name = "guesser"
version = "0.1.0"
edition = "2024"
default-run = "guesser"

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.31"
lancedb = "0.22.3"
arrow-array = "56.2.0"
langchain-rust = "4.6.0"
regex = "1.12.2"
rig-core = "0.24.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
